Fixed issues with style on small windows (#29)

--- a/client/src/features/editors/Editor.module.css
+++ b/client/src/features/editors/Editor.module.css
@@ -36,14 +36,10 @@
   .mainContainer {
     grid-template-rows: auto 1fr;
     grid-template-columns: 100%;
+    column-gap: 0;
     grid-template-areas:
-      'mess'
-      'play';
-  }
-
-  .messages,
-  .playback {
-    min-width: 31em;
+      'play'
+      'mess';
   }
 
   .editor,
@@ -56,9 +52,10 @@
 /* 1/3 corner window, playback only */
 @media (max-width: 900px) and (max-height: 500px) {
   .mainContainer {
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr;
+    grid-template-rows: 100%;
+    grid-template-columns: 100%;
     grid-template-areas: 'play';
+    max-height: 325px;
   }
 
   .editor,
@@ -70,7 +67,7 @@
 }
 
 h1 {
-  font-size: 2.5vh;
+  font-size: 1.5em;
   color: rgba(255, 255, 255, 0.63);
   padding-bottom: 0.25em;
 }
